--- a/style.css
+++ b/style.css
@@ -78,50 +78,66 @@ a:hover {
 /* navbar END  */
 
 /* mobile k liye veiw    nav bar  */
-@media only screen and (max-width:400px) {
+@media only screen and (max-width:480px) {
   nav {
-    display: flex;
-    max-width: 100%;
-    height: 70px;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #353543;
-    color: #831111;
+    width: 100%;
+    max-width: 472px;
+    height: 80px;
+    background-color: red;
 
   }
 
   .logo {
-    font-size: 18px;
+font-size: 20px;
+    padding-left: 6px;
+    margin: 6px;
+    position: relative;
+    z-index: 2;
+    top: 5px;
     font-weight: 600;
     color: #fff;
-    position: relative;
-    left: -140px;
-    top: 2px;
   }
-  /* }
+  
 
-  .logo p {
-    font-size: 16px;
-    position: relative;
-    left: -5px;
-    top: 15px;
-
+  ul {
+  display: none;
   }
 
-  .logo h1 {
-    font-size: 16px;
-    position: relative;
-    left: -5px;
-    top: -5px;
+
+.icon i {
+  visibility: hidden;
+  }
+   #menu {
+    visibility: inherit;
+        color: white;
+        position: relative;
+        top: -5px;
+        left: 70px;
+        font-size: 25px;
+  }
+}
+
+@media only screen and (max-width:360px) {
+  nav {
+    width: 100vw;
+    max-width: 362px;
+    height: 80px;
+    background-color: yellow;
+
+
   }
 
-  .logo b {
-    font-size: 25px;
+  .logo {
+   
+    padding-left: 6px;
+    margin: 6px;
     position: relative;
-    left: -5px;
-    top: -10px;
-    padding-left: 22px;
-  } */
+    z-index: 2;
+    top:1px;
+    font-weight: 600;
+    color: #fff;
+  }
+  
 
   ul {
     display: none;
@@ -141,14 +157,14 @@ a:hover {
     left: -270px;
     visibility: hidden;
   }
-  #menu{
-     color: white;
-     position: relative;
-     top: 15px;
-     font-size: 25px;
+   #menu {
+        color: white;
+        position: relative;
+        top: -8px;
+        left: 70px;
+        font-size: 30px;
     visibility: visible;
   }
-
 }
 
 /* HERO SECTION START */
