--- a/style.css
+++ b/style.css
@@ -78,95 +78,13 @@ a:hover {
 /* navbar END  */
 
 /* mobile k liye veiw    nav bar  */
-@media only screen and (max-width:480px) {
-  nav {
+@media only screen and (min-width:200px)and (max-width:480px){
+  nav{
+    flex-direction: column;
     width: 100%;
-    max-width: 480px;
-    height: 80px;
-    background-color: red;
-
-  }
-
-  .logo {
-font-size: 20px;
-    padding-left: 6px;
-    margin: 6px;
-    position: relative;
-    z-index: 2;
-    top: 5px;
-    font-weight: 600;
-    color: #fff;
-  }
-  
-
-  ul {
-  display: none;
-  }
-
-
-.icon i {
-  visibility: hidden;
-  }
-   #menu {
-    visibility: inherit;
-        color: white;
-        position: relative;
-        top: -5px;
-        left: 70px;
-        font-size: 25px;
+    color: yellow;
   }
 }
-
-@media only screen and (max-width:360px) {
-  nav {
-    width: 100vw;
-    max-width: 362px;
-    height: 80px;
-    background-color: yellow;
-
-
-  }
-
-  .logo {
-   
-    padding-left: 6px;
-    margin: 6px;
-    position: relative;
-    z-index: 2;
-    top:1px;
-    font-weight: 600;
-    color: #fff;
-  }
-  
-
-  ul {
-    display: none;
-  }
-
-
-.icon i {
-
-     width: 13px;
-    height: 13px;
-    margin-left: 15px;
-    font-size: 25px;
-    color: #d61111;
-    position: relative;
-    z-index: 5;
-    top: 5px;
-    left: -270px;
-    visibility: hidden;
-  }
-   #menu {
-        color: white;
-        position: relative;
-        top: -8px;
-        left: 70px;
-        font-size: 30px;
-    visibility: visible;
-  }
-}
-
 /* HERO SECTION START */
 .main {
   display: flex;
@@ -313,62 +231,7 @@ font-size: 20px;
 
 /* HERO SECTION END */
 
-@media only screen and (max-width:768px) {
-  .main {
 
-}
-/* 
-.left {
-  color: #fff;
-  padding-left: 160px;
-  padding-top: -100px;
-  position: relative;
-  top: -25px;
-} */
-
-.para_1 {
-  position: relative;
-  left: -45%;
-  z-index: 1;
-  font-size: 50px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-weight: 100;
-  padding-left: 130px;
-  padding-top: 50px;
-}
-
-.heading_1 {
-  position: relative;
-  left: -5px;
-  z-index: 1;
-  padding-left: 0px;
-  padding-top: 15px;
-  font-size: 30px;
-}
-
-.hrline {
-  width: 150px;
-  height: 6px;
-  position: relative;
-  left: -12px;
-  border-radius: 20px;
-  background-color: #e47310;
-}
-
-.para_2 {
-  position: relative;
-  left: -280px;
-  top: -160px;
-  margin: 50px;
-  z-index: 1;
-  font-size: 18px;
-  padding-left: 110px;
-  padding-top: 5px;
-  margin: 180px;
-}
-
-
-}
 /* LINK BAR SECTIN START */
 .linkbar {
   position: absolute;
