--- a/style.css
+++ b/style.css
@@ -78,12 +78,53 @@ a:hover {
 /* navbar END  */
 
 /* mobile k liye veiw    nav bar  */
-@media only screen and (min-width:200px)and (max-width:480px){
+@media only screen and (min-width:200px)and (max-width:768px){
   nav{
     flex-direction: column;
     width: 100%;
     color: yellow;
+    height: 100px;
+    position: relative;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: #353543;
+
   }
+  .logo{
+    position: relative;
+    left: -230px;
+
+    margin: 0;
+    top: 15px;
+    font-size: 20px;
+  }
+  ul{
+    display: none;
+  }
+.icon{
+  margin-right: 90%;
+  position: relative;
+  left: 85%;
+  top: -30px;
+  visibility: hidden;
+}
+.icon #menu{
+  font-size: 25px;
+  color: #fff;
+  visibility: visible;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+#menu{
+  font-size: 30px;
+  color: #fff;
+  visibility: visible;
+  position: absolute;
+  top: 20px;
+}
 }
 /* HERO SECTION START */
 .main {
