--- a/style.css
+++ b/style.css
@@ -80,24 +80,23 @@ a:hover {
 /* mobile k liye veiw    nav bar  */
 @media only screen and (min-width:200px)and (max-width:768px){
   nav{
+    display: flex;
     flex-direction: column;
     width: 100%;
     color: yellow;
-    height: 100px;
     position: relative;
     top: 0;
     left: 0;
     justify-content: center;
     align-items: center;
-    background-color: #353543;
+    background-color: #0a0ab1;
 
   }
   .logo{
     position: relative;
     left: -230px;
-
     margin: 0;
-    top: 15px;
+    top: 27px;
     font-size: 20px;
   }
   ul{
@@ -117,6 +116,7 @@ a:hover {
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  padding-top: 25px;
 }
 #menu{
   font-size: 30px;
@@ -126,6 +126,8 @@ a:hover {
   top: 20px;
 }
 }
+/* mobile k liye veiw nav bar end  */ 
+
 /* HERO SECTION START */
 .main {
   display: flex;
@@ -272,9 +274,129 @@ a:hover {
 
 /* HERO SECTION END */
 
+/* HERO SECTION MEDIA QUERY START */
+@media only screen and (min-width: 200px) and (max-width:768px) {
+  .main {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .left {
+    padding-left: 0;
+    padding-top: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .para_1 {
+    padding-left: 20px;
+    padding-top: 50px;
+    font-size: 40px;
+    position: absolute;
+    left: 0px;
+  }
+
+  .heading_1 {
+    padding-left: 20px;
+    padding-top: 10px;
+    font-size: 40px;
+    position: absolute;
+    left: 0px;
+    top: 105px;
+  }
+
+  .hrline {
+    width: 130px;
+    height: 5px;
+    left: -120px;
+    top: 145px;
+
+  }
+
+  .para_2 {
+   width: 130%;
+   font-size: 11px;
+   position: relative;
+   left: -40px;
+   top: -10px;
+   padding: 0px 120px;
+  }
+
+  .right {
+    position: relative;
+    top: -740px;
+    left: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .heading_2 {
+    padding-left: 0;
+    padding-top: 10%;
+    font-size: 17px;
+  }
+
+  .para_3 {
+    /* width: 100%; */
+    /* margin:auto; */
+    position: relative;
+    top: 10px;
+    left: -40px;
+    font-size: 12px;
+    margin: 5px 44px;
+  }
+
+  .contact {
+    font-size: 13px;
+    position: relative;
+    top: 20px;
+    left: 5px;
+  }
+  .contact i{
+    font-size: 13px;
+  }
+
+  .icon_2 {
+    position: relative;
+    left: -40px;
+    top: 30px;
+  }
+
+  .child_icon_2 {
+    width: 24px;
+    height: 24px;
+  }
+
+  .child_icon_2 i {
+    font-size: 16px;
+  }
+
+  
+  .circle {
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    top: 450px;
+    left: 8px;
+  }
+
+  .img_1 {
+    position: relative;
+    left: 10px;
+    top: -110px;
+    width: 100%;
+    height: 499px;
+  
+  } 
+
+}
 
 /* LINK BAR SECTIN START */
-.linkbar {
+ .linkbar {
   position: absolute;
   top: 490px;
   z-index: 3;
@@ -282,7 +404,7 @@ a:hover {
   width: 62%;
   height: 120px;
   border-radius: 10px;
-  /* color: rgb(255, 196, 0); */
+   color: rgb(255, 196, 0); 
   background-color: #2D2D39;
   margin: auto;
 
@@ -499,4 +621,4 @@ footer .social_links span a {
   display: block;
 }
 
-/* ITEMS SECTION END  */
+ITEMS SECTION END  */
