--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ a:hover {
 /* navbar END  */
 
 /* mobile k liye veiw    nav bar  */
-@media only screen and (min-width:200px)and (max-width:768px){
-  nav{
+@media only screen and (min-width:200px)and (max-width:768px) {
+  nav {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -92,41 +92,47 @@ a:hover {
     background-color: #0a0ab1;
 
   }
-  .logo{
+
+  .logo {
     position: relative;
     left: -230px;
     margin: 0;
     top: 27px;
     font-size: 20px;
   }
-  ul{
+
+  ul {
     display: none;
   }
-.icon{
-  margin-right: 90%;
-  position: relative;
-  left: 85%;
-  top: -30px;
-  visibility: hidden;
+
+  .icon {
+    margin-right: 90%;
+    position: relative;
+    left: 85%;
+    top: -30px;
+    visibility: hidden;
+  }
+
+  .icon #menu {
+    font-size: 25px;
+    color: #fff;
+    visibility: visible;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    padding-top: 25px;
+  }
+
+  #menu {
+    font-size: 30px;
+    color: #fff;
+    visibility: visible;
+    position: absolute;
+    top: 20px;
+  }
 }
-.icon #menu{
-  font-size: 25px;
-  color: #fff;
-  visibility: visible;
-  display: flex;
-  align-items: flex-end;
-  justify-content: center;
-  padding-top: 25px;
-}
-#menu{
-  font-size: 30px;
-  color: #fff;
-  visibility: visible;
-  position: absolute;
-  top: 20px;
-}
-}
-/* mobile k liye veiw nav bar end  */ 
+
+/* mobile k liye veiw nav bar end  */
 
 /* HERO SECTION START */
 .main {
@@ -316,17 +322,17 @@ a:hover {
   }
 
   .para_2 {
-   width: 130%;
-   font-size: 11px;
-   position: relative;
-   left: -40px;
-   top: -10px;
-   padding: 0px 120px;
+    width: 130%;
+    font-size: 11px;
+    position: relative;
+    left: -40px;
+    top: -10px;
+    padding: 0px 120px;
   }
 
   .right {
     position: relative;
-    top: -740px;
+    top: -650px;
     left: 30px;
     display: flex;
     flex-direction: column;
@@ -356,7 +362,8 @@ a:hover {
     top: 20px;
     left: 5px;
   }
-  .contact i{
+
+  .contact i {
     font-size: 13px;
   }
 
@@ -375,7 +382,7 @@ a:hover {
     font-size: 16px;
   }
 
-  
+
   .circle {
     width: 400px;
     height: 400px;
@@ -386,36 +393,42 @@ a:hover {
 
   .img_1 {
     position: relative;
-    left: 10px;
-    top: -110px;
-    width: 100%;
-    height: 499px;
-  
-  } 
+    left: 50px;
+    top: -90px;
+    width: 280px;
+
+  }
 
 }
 
 /* LINK BAR SECTIN START */
- .linkbar {
+.linkbar {
   position: absolute;
   top: 490px;
   z-index: 3;
   left: 280px;
-  width: 62%;
+  width: 65%;
   height: 120px;
   border-radius: 10px;
-   color: rgb(255, 196, 0); 
+  color: rgb(255, 196, 0);
   background-color: #2D2D39;
   margin: auto;
 
 }
 
 .link_social {
-  width: 55%;
+  width: 100%;
   position: absolute;
-  left: 65px;
+  left: 10px;
+  top: 30px;
   z-index: 3;
   height: 40%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  gap: 50px;
+  /* background-color: #2D2D39; */
 }
 
 .child_link {
@@ -425,24 +438,23 @@ a:hover {
 
 }
 
-.child_link b {
+p.child_link b {
   background-color: #353543;
   padding: 10px 20px;
   position: relative;
-  top: 40px;
+  top: 15px;
   color: #FFFFFF;
-  left: 180px;
-  font-size: 25px;
+  left: 10px;
+  font-size: 20px;
 }
 
-.child_link i {
-  display: inline;
+p.child_link i {
   font-size: 25px;
   padding-right: 10px;
 
 }
 
-.child_link i {
+p .child_link i {
   font-size: 25px;
   padding-left: 10px;
 
@@ -456,6 +468,82 @@ a:hover {
 }
 
 /* LINK BAR SECTION END */
+@media only screen and (min-width: 200px) and (max-width:768px) {
+  .linkbar {
+    width: 80%;
+    height: 120px;
+    position: relative;
+    top: -320px;
+    left: 20px;
+    margin: auto;
+
+  }
+
+  .link_social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+    position: relative;
+    left: 0px;
+    top: 1px;
+    height: auto;
+    background-color: #2D2D39;
+    border-radius: 10px;
+  }
+.child_link {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    border-radius: 10px;
+    
+  }
+  p.child_link b {
+    font-size: 14px;
+    padding: 8px 12px;
+    top: 10px;
+  }
+
+  p.child_link i {
+    font-size: 20px;
+    padding-left: 0px;
+  }
+
+ p > b.link_w{
+    padding: 15px 19px;
+    position: relative;
+    left:10px;
+    top: 6px;
+    border-radius: 10px;
+  }
+
+ p > b.link_f {
+    padding: 15px 22px;
+    position: relative;
+    left:-4px;
+    top: 6px;
+    border-radius: 10px;
+  }
+
+ p > b.link_l {
+    padding: 15px 30px;
+    position: relative;
+    left:10px;
+    top: 0px;
+    border-radius: 10px;
+
+  }
+  p > b.link_s {
+    padding: 15px 37px;
+    position: relative;
+    left:-2px; 
+    top: 1px;
+    border-radius: 10px;
+  }
+}
+
 /* ITENS SECTION START */
 .main_last {
   width: 100%;
@@ -621,4 +709,4 @@ footer .social_links span a {
   display: block;
 }
 
-ITEMS SECTION END  */
+ITEMS SECTION END */
