--- a/style.css
+++ b/style.css
@@ -281,10 +281,17 @@ a:hover {
 /* HERO SECTION END */
 
 /* HERO SECTION MEDIA QUERY START */
-@media only screen and (min-width: 200px) and (max-width:768px) {
+@media only screen and (max-width:480px) {
   .main {
+    display: flex;
+    justify-content: center;
     flex-direction: column;
-    height: auto;
+    width: 100%;
+    height: 840px;
+    /* padding-top:0px; */
+    margin: 0px;
+    background-color: #7d7d7e;
+
   }
 
   .left {
@@ -302,6 +309,7 @@ a:hover {
     font-size: 40px;
     position: absolute;
     left: 0px;
+    top: 110px;
   }
 
   .heading_1 {
@@ -310,29 +318,32 @@ a:hover {
     font-size: 40px;
     position: absolute;
     left: 0px;
-    top: 105px;
+    top: 200px;
   }
 
   .hrline {
     width: 130px;
     height: 5px;
-    left: -120px;
-    top: 145px;
+    position: absolute;
+    left: 24px;
+    top: 262px;
 
   }
 
   .para_2 {
     width: 130%;
-    font-size: 11px;
+    font-size: 17px;
     position: relative;
-    left: -40px;
-    top: -10px;
-    padding: 0px 120px;
+    left: -2px;
+    /* justify-content: baseline; */
+    text-align: justify;
+    top: 85px;
+    padding: 0px 85px;
   }
 
   .right {
     position: relative;
-    top: -650px;
+    top: -590px;
     left: 30px;
     display: flex;
     flex-direction: column;
@@ -343,58 +354,68 @@ a:hover {
   .heading_2 {
     padding-left: 0;
     padding-top: 10%;
-    font-size: 17px;
+    font-size: 20px;
+    position: relative;
+    left: -6px;
+    top: 20px;
   }
 
   .para_3 {
     /* width: 100%; */
     /* margin:auto; */
     position: relative;
-    top: 10px;
+    top: 28px;
     left: -40px;
-    font-size: 12px;
-    margin: 5px 44px;
+    font-size: 17px;
+    text-align: justify;
+    margin: 5px 35px;
   }
 
   .contact {
-    font-size: 13px;
+    font-size: 18px;
     position: relative;
-    top: 20px;
-    left: 5px;
+    top: 40px;
+    left: -2px;
   }
 
   .contact i {
-    font-size: 13px;
+    font-size: 15px;
+    /* margin: auto; */
+    /* padding-bottom: 2px; */
   }
 
   .icon_2 {
     position: relative;
-    left: -40px;
-    top: 30px;
+    left: -4px;
+    top: 70px;
+    /* background-color: #6e6ea5; */
+    
   }
 
   .child_icon_2 {
-    width: 24px;
-    height: 24px;
+    width: 45px;
+    height: 45px;
   }
 
   .child_icon_2 i {
-    font-size: 16px;
+    font-size: 26px;
+    padding-top: 3px;
   }
 
 
   .circle {
-    width: 400px;
-    height: 400px;
+    width: 350px;
+    height: 350px;
+    /* margin: auto; */
     position: absolute;
-    top: 450px;
-    left: 8px;
+    top: 530px;
+    left: 33px;
   }
 
   .img_1 {
     position: relative;
-    left: 50px;
-    top: -90px;
+    left: 17%;
+    top: 49px;
     width: 280px;
 
   }
@@ -468,13 +489,13 @@ p .child_link i {
 }
 
 /* LINK BAR SECTION END */
-@media only screen and (min-width: 200px) and (max-width:768px) {
+@media only screen and (max-width:480px) {
   .linkbar {
-    width: 80%;
+    width: 85%;
     height: 120px;
     position: relative;
-    top: -320px;
-    left: 20px;
+    top: -70px;
+    left: 2px;
     margin: auto;
 
   }
@@ -490,7 +511,7 @@ p .child_link i {
     top: 1px;
     height: auto;
     background-color: #2D2D39;
-    border-radius: 10px;
+    border-radius: 6px;
   }
 .child_link {
     display: flex;
@@ -512,35 +533,35 @@ p .child_link i {
   }
 
  p > b.link_w{
-    padding: 15px 19px;
-    position: relative;
-    left:10px;
-    top: 6px;
-    border-radius: 10px;
-  }
-
- p > b.link_f {
-    padding: 15px 22px;
-    position: relative;
-    left:-4px;
-    top: 6px;
-    border-radius: 10px;
-  }
-
- p > b.link_l {
     padding: 15px 30px;
     position: relative;
     left:10px;
+    top: 6px;
+    /* border-radius: 10px; */
+  }
+
+ p > b.link_f {
+    padding: 15px 30px;
+    position: relative;
+    left:-5px;
+    top: 6px;
+    /* border-radius: 10px; */
+  }
+
+ p > b.link_l {
+    padding: 15px 38px;
+    position: relative;
+    left:4px;
     top: 0px;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 
   }
   p > b.link_s {
-    padding: 15px 37px;
+    padding: 15px 52px;
     position: relative;
-    left:-2px; 
-    top: 1px;
-    border-radius: 10px;
+    left:-10px; 
+    top: 0px;
+    /* border-radius: 10px; */
   }
 }
 
@@ -709,4 +730,143 @@ footer .social_links span a {
   display: block;
 }
 
-ITEMS SECTION END */
+/* ITEMS SECTION END  */
+@media only screen and (max-width:480px) {
+  .main_last {
+  width: 124.4%;
+  height: auto;
+  /* background-color: #2d2d96; */
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: -120px;
+  left: -100px;
+}
+
+.left_side {
+  background-color: #2D2D39;
+  width: 100%;
+  height: 420px;
+  display: flex;
+  flex-direction: column;
+  padding: 44%;
+}
+
+.heading_5 {
+  font-size: 25px;
+  color: #fff;
+  position: relative;
+  left: -200px;
+  top: -180px;
+  width: 400px;
+  /* padding: 44% 30px; */
+}
+
+.para_5 {
+  font-size: 12px;
+  padding: 0px 80px;
+  position: relative;
+  left: -220px;
+  top: -180px;
+  width: 400px;
+  color: #fff;
+}
+
+.tb p {
+  font-size: 9px;
+  padding-left: 10px;
+  color: white;
+}
+
+.tb {
+  color: orange;
+}
+
+table {
+  position: relative;
+  left: -140px;
+  top: -160px;
+  padding: 20px 0px;
+  width: 250px;
+
+}
+.range {
+  font-size: 0px;
+  color: orange#fff;
+
+}
+.right_side {
+  /* max-width: 35%; */
+  /* border: solid; */
+  position: relative;
+  left: -280px;
+  top: -60px;
+  width: 100%;
+  height: 500px;
+}
+
+.last_box {
+  width: 600px;
+  height: 120px;
+  margin-bottom: 2px;
+  /* border: solid; */
+  position: relative;
+  left: 400px;
+  display: flex;
+  top: 120px;
+}
+
+.last_box img {
+  width: 100px;
+  height: 90px;
+}
+
+.last_box h4 {
+  position: relative;
+  top: 30px;
+  color: #fff;
+  left: 13px;
+  font-size: 15px;
+}
+
+.last_box p {
+  color: #fff;
+  font-size: 12px;
+  padding-left: 12px;
+}
+
+.arrow_1 {
+  position: relative;
+  color: orange;
+  left: 130px;
+  top: 40px;
+  font-size: 20px;
+}
+
+.arrow_2 {
+  position: relative;
+  left: 99px;
+  color: orange;
+  top: 40px;
+  font-size: 20px;
+}
+
+.arrow_3 {
+  position: relative;
+  left: 90px;
+  color: orange;
+  top: 40px;
+  font-size: 20px;
+}
+
+.hr {
+  width: 400px;
+  height: 2px;
+  background-color: #55555F;
+  position: relative;
+  left: -60px;
+  top: 95px;
+  margin: auto;
+}
+
+}
