--- a/style.css
+++ b/style.css
@@ -10,7 +10,10 @@
   font-family: "Stack Sans Text", sans-serif;
 
 }
-
+body {
+  overflow-x: hidden;
+  /* background-color: #7d7d7e; */
+}
 nav {
   display: flex;
   max-width: 100%;
@@ -135,7 +138,7 @@ a:hover {
 /* mobile k liye veiw nav bar end  */
 
 /* HERO SECTION START */
-/*.main {
+.main {
   display: flex;
   justify-content: space-around;
   width: 100%;
@@ -286,7 +289,7 @@ a:hover {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
+    width: 100vw;
     height: 840px;
     /* padding-top:0px; */
     margin: 0px;
@@ -299,6 +302,7 @@ a:hover {
     padding-top: 20px;
     text-align: center;
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: center;
   }
@@ -428,7 +432,7 @@ a:hover {
   top: 490px;
   z-index: 3;
   left: 280px;
-  width: 65%;
+  width: 65vw;
   height: 120px;
   border-radius: 10px;
   color: rgb(255, 196, 0);
@@ -489,7 +493,7 @@ p .child_link i {
 }
 
 /* LINK BAR SECTION END */
-@media only screen and (max-width:768PX) {
+@media only screen and (max-width:768px) {
   .linkbar {
     width: 85%;
     height: 120px;
@@ -868,4 +872,44 @@ table {
   margin: auto;
 }
 
-} 
+footer {
+  width: 100%;
+  height: 200px;
+  z-index: 2;
+  background-color: #0d0d19;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  position: absolute;
+  top: 250%;
+}
+
+footer p {
+  font-size: 16px;
+  margin: 0;
+  margin-top: 50px;
+  padding: 10px 0;
+}
+
+footer .social_links {
+  margin-top: 15px;
+  /* background-color: #2e2e8a; */
+}
+
+footer .social_links span {
+  display: inline-block;
+  margin: 0 10px;
+  background-color: #4A4857;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  line-height: 30px;
+}
+
+footer .social_links span a {
+  color: #E4AE30;
+  font-size: 20px;
+  line-height: 40px;
+  display: block;
+}
+}
