--- a/style.css
+++ b/style.css
@@ -893,7 +893,7 @@ footer p {
 
 footer .social_links {
   margin-top: 15px;
-  /* background-color: #2e2e8a; */
+  background-color: #2e2e8a;
 }
 
 footer .social_links span {
